# Task_Manager

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  test_translations.py
.github/workflows/: psql-chek.yml  pyci.yml
_project_/: settings.py  tests.py  urls.py
_project_/templates/: index.html
_project_/templates/includes/: sidebar.html
_project_/templates/labels/: create.html  delete.html  update.html
_project_/templates/statuses/: create.html  update.html
_project_/templates/tasks/: create.html  filter.html  list.html
_project_/templates/users/: create.html  delete.html  login.html
apps/labels/: apps.py  models.py  tests.py  urls.py  views.py
apps/labels/migrations/: 0001_initial.py  0002_alter_label_created_alter_label_name.py  0003_label_updated_alter_label_created.py  0004_alter_label_options.py  0005_alter_label_name.py  0006_alter_label_name.py
apps/statuses/: apps.py  models.py  tests.py  views.py
apps/statuses/migrations/: 0001_initial.py  0002_alter_status_created.py  (+5 more)
apps/tasks/: apps.py  filters.py  models.py  tests.py  urls.py  views.py
apps/users/: forms.py  tests.py  urls.py  views.py
core/: mixins.py  models.py  tests.py
task_manager/: admin.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/tasks/: filters.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  index.html
task_manager/users/: forms.py  tests.py  views.py
(+29 files in other folders)
