[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Denis <ad.way@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.2"
dj-database-url = "^2.2.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
