[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager - "
authors = ["Denis <ad.way@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.2"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
django-filter = "^24.2"
rollbar = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
